# asr-model-comparison

./: .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  INSTALL.md  LICENSE  LICENSE-MIT  README.md  launch-with-log.ps1  launcher.ps1  run.bat  run.ps1  run.sh
app/: README.md  package-lock.json  package.json  playwright.config.ts
app/scripts/: build-macos-app.sh  build-windows-exe.ps1  translate_hf.py
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/src/: accelerator.rs  config.rs  lib.rs  logging.rs  main.rs  models.rs  server.rs  tauri_main.rs  translation.rs  validation.rs
app/src-tauri/src/asr/: audio.rs  backend.rs  hybrid.rs  mod.rs  qwen_candle.rs  qwen_ffi.rs  voxtral_llamacpp.rs  voxtral_mistralrs.rs  voxtral_onnx.rs
app/src-tauri/src/native/: voxtral_realtime_bridge.cpp
app/src-tauri/src/qwen_native/: config.rs  decoder.rs  encoder.rs  hub.rs  inference.rs  linear.rs  mel.rs  mod.rs
app/tests/: rust-server.spec.ts
asr-model-comparison/: .gitignore  LICENSE  README.md  run.bat  run.ps1  run.sh
asr-model-comparison/audio_samples/: README.md
asr-model-comparison/backend/: INSTALL.md  README.md  pyproject.toml  requirements.txt
asr-model-comparison/backend/app/: __init__.py  main.py
asr-model-comparison/backend/app/api/: __init__.py
asr-model-comparison/backend/app/api/routers/: __init__.py  models.py  status.py  transcribe.py
asr-model-comparison/backend/app/models/: __init__.py  available_models.py  schemas.py
asr-model-comparison/backend/app/services/: __init__.py  model_manager.py
asr-model-comparison/backend/app/services/asr_backends/: factory.py  qwen3_backend.py  voxtral_backend.py  whisper_backend.py
asr-model-comparison/backend/app/utils/: __init__.py  audio.py  server_logging.py
asr-model-comparison/backend/tests/: __init__.py  test_backend_advanced.py  test_japanese_accuracy_real_audio.py  test_model_service.py  test_qwen3_official_backend.py  test_qwen_voxtral_minimal.py  test_qwen_voxtral_practical.py  test_qwen_voxtral_realtime_dedicated.py  test_real_multimodel_support.py  test_real_whisper_integration.py  test_realtime_qwen_voxtral.py  test_realtime_streaming.py  test_server_logging.py  test_static_serving.py  test_status_api.py  test_translation.py  test_voxtral_practical_level.py  test_websocket_protocol_v2.py  test_websocket_streaming_practical.py
asr-model-comparison/backend/tests/audio_samples/: README.md
asr-model-comparison/frontend/: README.md  diagnose-prod.js  index.html  package-lock.json  package.json  playwright.config.prod.ts  playwright.config.ts  vite.config.ts
asr-model-comparison/frontend/public/: manifest.json
asr-model-comparison/frontend/scripts/: ensure-static-shell.js
asr-model-comparison/frontend/src/: entry.client.tsx  entry.dev.tsx  global.css  root.tsx
asr-model-comparison/frontend/src/routes/: index.tsx
asr-model-comparison/frontend/tests/: UI-COMPONENTS-E2E-DESIGN.md  real-time.spec.ts  smoke.prod.spec.ts  ws-protocol.prod.spec.ts
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/routers/: models.py  transcribe.py
backend/app/models/: schemas.py
backend/app/services/: model_manager.py  translation.py
backend/app/services/asr_backends/: __init__.py  base.py  factory.py  qwen3_backend.py  voxtral_backend.py  whisper_backend.py
backend/app/utils/: __init__.py  server_logging.py
backend/tests/: test_api_models.py  test_qwen3_official_backend.py  test_qwen_voxtral_practical.py  test_qwen_voxtral_realtime_dedicated.py  test_real_multimodel_support.py  test_static_serving.py  test_transcribe_api.py  test_translation.py  test_voxtral_practical_level.py  test_websocket_protocol_v2.py  test_websocket_streaming_practical.py
backend/tests/audio_samples/: .gitkeep  README.md
docs/: real-time-japanese-usage.md  specs.md
docs/backlog/: backlog.md
docs/backlog/bugs/: README.md
docs/backlog/features/: README.md  audio-source-selection.md  backlog-18-macos-tauri-acceleration.md  backlog-19-voxtral-macos-executorch-metal.md  backlog-7-rust-tauri-rewrite.md  backlog-9-13-asr-translation-ui.md
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.prod.ts  tsconfig.json  vite.config.client.ts
frontend/scripts/: ensure-static-shell.js
frontend/src/: entry.dev.tsx  entry.ssr.tsx  global.css  root.tsx
frontend/src/routes/: index.tsx  layout.tsx
frontend/tests/: real-time.spec.ts  smoke.prod.spec.ts  ws-protocol.prod.spec.ts
