[package]
name = "amcp-tauri"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "amcp_tauri"
path = "src/lib.rs"

[[bin]]
name = "amcp-server"
path = "src/main.rs"

[[bin]]
name = "amcp-desktop"
path = "src/tauri_main.rs"
required-features = ["desktop"]

[features]
default = []
desktop = ["dep:tauri"]
whisper = ["dep:reqwest", "dep:whisper-rs"]
whisper-cuda = ["whisper", "whisper-rs/cuda"]
whisper-vulkan = ["whisper", "whisper-rs/vulkan"]
qwen = []
voxtral = []

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json", "multipart", "ws"] }
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
http = "1"
mime_guess = "2"
reqwest = { version = "0.13.4", features = ["blocking", "rustls"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.6.0", features = ["all"] }
tauri = { version = "2", optional = true }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "time"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
whisper-rs = { version = "0.16.0", optional = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

