[package]
name = "amcp-tauri"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "amcp_tauri"
path = "src/lib.rs"

[[bin]]
name = "amcp-server"
path = "src/main.rs"

[[bin]]
name = "amcp-desktop"
path = "src/tauri_main.rs"
required-features = ["desktop"]

[features]
default = []
desktop = ["dep:tauri"]
whisper = ["dep:hf-hub", "dep:reqwest", "dep:whisper-rs"]
whisper-cuda = ["whisper", "whisper-rs/cuda"]
whisper-vulkan = ["whisper", "whisper-rs/vulkan"]
qwen = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:hf-hub",
    "dep:hound",
    "dep:log",
    "dep:reqwest",
    "dep:rubato",
    "dep:rustfft",
    "dep:safetensors",
    "dep:tokenizers",
]
qwen-cuda = ["qwen", "candle-core/cuda", "candle-nn/cuda"]
voxtral = ["dep:hf-hub", "dep:ndarray", "dep:ort", "dep:rustfft", "dep:tokenizers"]
voxtral-directml = ["voxtral", "ort/directml"]
voxtral-cuda = ["voxtral", "ort/cuda"]

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json", "multipart", "ws"] }
bytes = "1"
candle-core = { version = "0.9.2", optional = true }
candle-nn = { version = "0.9.2", optional = true }
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
hf-hub = { version = "0.5.0", optional = true }
hound = { version = "3", optional = true }
http = "1"
libc = "0.2.186"
log = { version = "0.4", optional = true }
mime_guess = "2"
ndarray = { version = "0.17.2", optional = true }
ort = { version = "2.0.0-rc.12", optional = true }
reqwest = { version = "0.13.4", features = ["blocking", "rustls"], optional = true }
rubato = { version = "0.15", optional = true }
rustfft = { version = "6.4.1", optional = true }
safetensors = { version = "0.7.0", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.6.0", features = ["all"] }
tauri = { version = "2", optional = true }
thiserror = "2"
tokenizers = { version = "0.23.1", default-features = false, features = ["fancy-regex"], optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "time"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
whisper-rs = { version = "0.16.0", optional = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

